start on fastfood ordering km

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -1,6 +1,8 @@
 DONE for -rt print out paraphrases that are different as warning
 what is greg's weight in pounds
+finish up time_dimension
 show weight in pounds
+have test check parenthesize output
 get degree out of dimension
 in numbers do real/integer etc
 show numbers to two decimal places
