fixes for config/baseConfig/addX mess. wip

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -1,3 +1,9 @@
+no api passed to initializer -> do it
+no config passed to initializer -> ???
+get rid of list based generators and semantics
+fix initializeFn args bs
+
+
 DONE for -rt print out paraphrases that are different as warning
 what is greg's weight in pounds
 release nodes
