more fixes for refactor of initializer

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -1,5 +1,7 @@
 no api passed to initializer -> do it
 no config passed to initializer -> ???
+no km/kms passed to initializer -> pass apis + error out on use in before
+add addAPI to initializer config
 get rid of list based generators and semantics
 fix initializeFn args bs
 
