move modifies to its own file

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -6,6 +6,7 @@ get rid of list based generators and semantics
 fix initializeFn args bs
 
 
+for check -> has a mask of sub propertyes to be interested in / selector fucntion or something
 DONE for -rt print out paraphrases that are different as warning
 what is greg's weight in pounds
 release nodes
