call concept directement

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -4,8 +4,9 @@ no km/kms passed to initializer -> pass apis + error out on use in before
 add addAPI to initializer config
 get rid of list based generators and semantics
 fix initializeFn args bs
+initializerFn has api but semantic apply has api that is different / also km / kms need to bey synced
 
-
+make all the km names either plural or singular. properties/concept/hierarchy
 for check -> has a mask of sub propertyes to be interested in / selector fucntion or something
 DONE for -rt print out paraphrases that are different as warning
 what is greg's weight in pounds
