fixey the bouges

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -2,9 +2,9 @@ no api passed to initializer -> do it
 no config passed to initializer -> ???
 no km/kms passed to initializer -> pass apis + error out on use in before
 add addAPI to initializer config
-get rid of list based generators and semantics
 fix initializeFn args bs
 initializerFn has api but semantic apply has api that is different / also km / kms need to bey synced
+sort the hierarchy properties
 
 make all the km names either plural or singular. properties/concept/hierarchy
 for check -> has a mask of sub propertyes to be interested in / selector fucntion or something
@@ -13,7 +13,6 @@ what is greg's weight in pounds
 release nodes
 finish up time_dimension
 show weight in pounds
-XXX have test check parenthesize output
 get degree out of dimension
 in numbers do real/integer etc
 show numbers to two decimal places
@@ -24,23 +23,14 @@ use the metric system
 show distance as feet inches
 DONE auto mark contexts as dead if there is no operator? what about ...after deal with it later
 switch and from same to convolutions
-DONE types not having dups
-DONE types containing the full operator
-XXX fix up localHierarchy to take new notation
 remove the extra template files?
-DONE finish level in json
-XXX add level in the generators + semantics
-XXX convert hierarchy to use level
 fix logging toe log.warn/log.error/log.info
 fix the no level warning
 get rid of level as an arg in Operator(
-XXX get rid of max_operators
-XXX reworkd levelSpecificHierarchy
 break Matcher_Type into Matcher_Type and Matcher_Variable
 fix the path in config_test to pull from current dir
 fix dump priorities to not use ordinals or lookup shit?
 get rid of inputss + outputs from IO just use digraph
-XXX convert all the throws in client to use an object no strings
 types in the client side using ['reason', 0] notation instead of 'reason#0' notation
 solve singlar/plural overrides better see it.*what
 clean up all the priorities being set
@@ -50,3 +40,15 @@ move listable + asList out of client into dialogues
 update flatten/uflatten to paramerize list
 add tests for animals
 deal with the associations from tests
+
+XXX get rid of list based generators and semantics
+DONE finish level in json
+DONE types not having dups
+DONE types containing the full operator
+XXX have test check parenthesize output
+XXX fix up localHierarchy to take new notation
+XXX add level in the generators + semantics
+XXX convert hierarchy to use level
+XXX get rid of max_operators
+XXX reworkd levelSpecificHierarchy
+XXX convert all the throws in client to use an object no strings
