add gw + number to args / start on model for overriding plural/singular lookups

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -5,6 +5,7 @@ add addAPI to initializer config
 fix initializeFn args bs
 initializerFn has api but semantic apply has api that is different / also km / kms need to bey synced
 sort the hierarchy properties
+finish up the word override implementation in gdefaults
 
 make all the km names either plural or singular. properties/concept/hierarchy
 for check -> has a mask of sub propertyes to be interested in / selector fucntion or something
