account for config not automatically setting api/objects/config

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -6,6 +6,7 @@ fix initializeFn args bs
 initializerFn has api but semantic apply has api that is different / also km / kms need to bey synced
 sort the hierarchy properties
 finish up the word override implementation in gdefaults
+load ordering -> dont allow any add after the API is set. then the API can assume all the KM's are present
 
 make all the km names either plural or singular. properties/concept/hierarchy
 for check -> has a mask of sub propertyes to be interested in / selector fucntion or something
