new listable matcher on server side

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -1,16 +1,13 @@
-no api passed to initializer -> do it
-no config passed to initializer -> ???
-no km/kms passed to initializer -> pass apis + error out on use in before
-add addAPI to initializer config
-fix initializeFn args bs
 initializerFn has api but semantic apply has api that is different / also km / kms need to bey synced
 sort the hierarchy properties
 finish up the word override implementation in gdefaults
 load ordering -> dont allow any add after the API is set. then the API can assume all the KM's are present
+generalize list on the server side+
+
+have failures on the match/apply side turn in to data that can go to the client for why questions
 
 make all the km names either plural or singular. properties/concept/hierarchy
 for check -> has a mask of sub propertyes to be interested in / selector fucntion or something
-DONE for -rt print out paraphrases that are different as warning
 what is greg's weight in pounds
 release nodes
 finish up time_dimension
@@ -23,7 +20,6 @@ for failures on the server side put a reason in the context. like 27.2 in 27.2 p
 use the metric system
 10 feet + 12 inches
 show distance as feet inches
-DONE auto mark contexts as dead if there is no operator? what about ...after deal with it later
 switch and from same to convolutions
 remove the extra template files?
 fix logging toe log.warn/log.error/log.info
@@ -43,6 +39,13 @@ update flatten/uflatten to paramerize list
 add tests for animals
 deal with the associations from tests
 
+DONE auto mark contexts as dead if there is no operator? what about ...after deal with it later
+DONE for -rt print out paraphrases that are different as warning
+XXX no api passed to initializer -> do it
+XXX no config passed to initializer -> ???
+XXX no km/kms passed to initializer -> pass apis + error out on use in before
+XXX add addAPI to initializer config
+XXX fix initializeFn args bs
 XXX get rid of list based generators and semantics
 DONE finish level in json
 DONE types not having dups
