got rid of motivation and used semantics (with oneShot and contextKeepMotivation flag) instead

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -1,8 +1,11 @@
+2 doubles combos <<<<<<<<<<<<<
+in the client dont write the logs unless they are going to be shown
 initializerFn has api but semantic apply has api that is different / also km / kms need to bey synced
 sort the hierarchy properties
 finish up the word override implementation in gdefaults
 load ordering -> dont allow any add after the API is set. then the API can assume all the KM's are present
 generalize list on the server side+
+work on ask.js
 
 have failures on the match/apply side turn in to data that can go to the client for why questions
 
