--- a/kms/common/todo
+++ b/kms/common/todo
@@ -6,6 +6,7 @@ finish up the word override implementation in gdefaults
 load ordering -> dont allow any add after the API is set. then the API can assume all the KM's are present
 generalize list on the server side+
 work on ask.js
+move ask out of client into dialogs or somethign
 
 have failures on the match/apply side turn in to data that can go to the client for why questions
 
