--- a/kms/common/todo
+++ b/kms/common/todo
@@ -5,6 +5,7 @@ sort the hierarchy properties
 finish up the word override implementation in gdefaults
 load ordering -> dont allow any add after the API is set. then the API can assume all the KM's are present
 generalize list on the server side+
+in tpmkms -> load kms with a function call to not have them all loaded for every require of tpmkms
 work on ask.js
 move ask out of client into dialogs or somethign
 
