new model for loading where functino call is neede

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -4,6 +4,7 @@ initializerFn has api but semantic apply has api that is different / also km / k
 sort the hierarchy properties
 finish up the word override implementation in gdefaults
 load ordering -> dont allow any add after the API is set. then the API can assume all the KM's are present
+time_dimension
 generalize list on the server side+
 in tpmkms -> load kms with a function call to not have them all loaded for every require of tpmkms
 work on ask.js
