multi-word modifiers for modifies phrase / update to use new checks parameter

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -1,4 +1,5 @@
 2 doubles combos <<<<<<<<<<<<<
+TEMPLATE -> get rid of the template files?
 in the client dont write the logs unless they are going to be shown
 initializerFn has api but semantic apply has api that is different / also km / kms need to bey synced
 sort the hierarchy properties
