fixing for fastfood

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -1,5 +1,6 @@
 2 doubles combos <<<<<<<<<<<<<
 TEMPLATE -> get rid of the template files?
+make it so first element in priorities is the highest since I keep doing that
 in the client dont write the logs unless they are going to be shown
 initializerFn has api but semantic apply has api that is different / also km / kms need to bey synced
 sort the hierarchy properties
