wip more details to fastfood

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -1,6 +1,6 @@
 2 doubles combos <<<<<<<<<<<<<
 TEMPLATE -> get rid of the template files?
-make it so first element in priorities is the highest since I keep doing that
+listable does not mean a list it means the elements in the list operator like a single operator
 in the client dont write the logs unless they are going to be shown
 initializerFn has api but semantic apply has api that is different / also km / kms need to bey synced
 sort the hierarchy properties
@@ -47,6 +47,7 @@ update flatten/uflatten to paramerize list
 add tests for animals
 deal with the associations from tests
 
+XXX make it so first element in priorities is the highest since I keep doing that
 DONE auto mark contexts as dead if there is no operator? what about ...after deal with it later
 DONE for -rt print out paraphrases that are different as warning
 XXX no api passed to initializer -> do it
