add it to change X to Y

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -1,4 +1,5 @@
 dimension should say 10 degrees celciss not 10 celcius
+make semantics by default no support evalaute you have to 
 2 doubles combos <<<<<<<<<<<<<
 TEMPLATE -> get rid of the template files?
 listable does not mean a list it means the elements in the list operator like a single operator
