added remove and reset

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -1,3 +1,4 @@
+synonnyms of restart -> reset clear
 dimension should say 10 degrees celciss not 10 celcius
 make semantics by default no support evalaute you have to 
 2 doubles combos <<<<<<<<<<<<<
