wip -> a large pop -> what kind of pop -> spite kind of thing

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -1,4 +1,7 @@
 synonnyms of restart -> reset clear
+use getWord + the names of things instead of food in the item
+
+
 dimension should say 10 degrees celciss not 10 celcius
 make semantics by default no support evalaute you have to 
 2 doubles combos <<<<<<<<<<<<<
