--- a/kms/common/todo
+++ b/kms/common/todo
@@ -5,7 +5,6 @@ use getWord + the names of things instead of food in the item
 dimension should say 10 degrees celciss not 10 celcius
 make semantics by default no support evalaute you have to 
 2 doubles combos <<<<<<<<<<<<<
-TEMPLATE -> get rid of the template files?
 listable does not mean a list it means the elements in the list operator like a single operator
 in the client dont write the logs unless they are going to be shown
 initializerFn has api but semantic apply has api that is different / also km / kms need to bey synced
@@ -16,7 +15,6 @@ time_dimension
 generalize list on the server side+
 in tpmkms -> load kms with a function call to not have them all loaded for every require of tpmkms
 work on ask.js
-move ask out of client into dialogs or somethign
 
 have failures on the match/apply side turn in to data that can go to the client for why questions
 
@@ -35,7 +33,6 @@ use the metric system
 10 feet + 12 inches
 show distance as feet inches
 switch and from same to convolutions
-remove the extra template files?
 fix logging toe log.warn/log.error/log.info
 fix the no level warning
 get rid of level as an arg in Operator(
@@ -53,6 +50,7 @@ update flatten/uflatten to paramerize list
 add tests for animals
 deal with the associations from tests
 
+XXX move ask out of client into dialogs or somethign
 XXX make it so first element in priorities is the highest since I keep doing that
 DONE auto mark contexts as dead if there is no operator? what about ...after deal with it later
 DONE for -rt print out paraphrases that are different as warning
@@ -72,3 +70,4 @@ XXX convert hierarchy to use level
 XXX get rid of max_operators
 XXX reworkd levelSpecificHierarchy
 XXX convert all the throws in client to use an object no strings
+XXX TEMPLATE -> get rid of the template files?
