add math to ui for fun

--- a/kms/common/todo
+++ b/kms/common/todo
@@ -1,3 +1,5 @@
+"spell checking"
+macros?
 do an expert system next
 synonnyms of restart -> reset clear
 use getWord + the names of things instead of food in the item
