--- a/kms/common/todo
+++ b/kms/common/todo
@@ -1,8 +1,12 @@
+show -> show what
+show verb + show noun -> choose the noun if default?
+implement equals as a separate things from is / same with hierarchy
 "spell checking"
 macros?
 do an expert system next
 synonnyms of restart -> reset clear
 use getWord + the names of things instead of food in the item
+23 the cost -> greg mcclement the person -> etc  -> write an operators for "(([instance]) op ([generalization]))
 
 
 dimension should say 10 degrees celciss not 10 celcius
