--- a/kms/common/todo
+++ b/kms/common/todo
@@ -1,3 +1,10 @@
+you can make these coffees -> list of coffees
+the coffees you can make are list of coffees
+fred can fly these planes.
+what can you make?
+what can fred fly?
+
+
 show -> show what
 show verb + show noun -> choose the noun if default?
 implement equals as a separate things from is / same with hierarchy
